# gameserver-pilot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  beszel-monitoring.md  beszel-setup.md
gameserver_pilot/: __init__.py  bot.py  config.py  server.py
gameserver_pilot/cloud/: __init__.py  base.py  ec2.py  mock.py
gameserver_pilot/game/: __init__.py  loop.py
gameserver_pilot/models/: __init__.py  game_state.py  player.py
gameserver_pilot/monitoring/: __init__.py  beszel_client.py  reporter.py
gameserver_pilot/monitors/: __init__.py  base.py  logfile.py  tshock.py
gameserver_pilot/networking/: __init__.py  connection.py
gameserver_pilot/utils/: __init__.py  id_generator.py
infra/terraform/: README.md
infra/terraform/environments/dev/: backend.tf  main.tf  outputs.tf  provider.tf  variables.tf
infra/terraform/environments/prod/: backend.tf  main.tf  provider.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  test_config.py  test_server.py
tests/cloud/: __init__.py  test_mock.py
tests/game/: __init__.py  test_loop.py
tests/models/: test_game_state.py  test_player.py
tests/monitoring/: test_beszel_client.py  test_reporter.py
tests/monitors/: __init__.py  test_logfile.py
tests/networking/: __init__.py  test_connection.py
