[project]
name = "gameserver-pilot"
version = "0.1.0"
description = "A scalable game server framework for real-time multiplayer games"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
gameserver-pilot = "gameserver_pilot:main"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "I", "PLR"]

[tool.ruff.lint.pylint]
max-complexity = 10
max-args = 8
max-branches = 15
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=gameserver_pilot --cov-report=term-missing"
