[project]
name = "gameserver-pilot"
version = "0.1.0"
description = "Discord bot for managing game servers on AWS EC2 with auto-stop on player absence"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord.py>=2.4.0",
    "boto3>=1.35.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[ec2]>=1.35.0",
    "mypy>=1.16.1",
    "moto>=5.0.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B", "I", "C90", "PLR"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["discord", "discord.ext.*", "boto3", "botocore.*", "moto"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=gameserver_pilot --cov-report=term-missing"
